PR feedback: remove delete user method from user service and all supporting code.